Closed Bug 41002 Opened 24 years ago Closed 24 years ago

Mac NSInstaller failing (error -239) on browser/mail files

Categories

(SeaMonkey :: Installer, defect, P1)

PowerPC
Mac System 8.5
defect

Tracking

(Not tracked)

VERIFIED FIXED

People

(Reporter: agracebush, Assigned: samir_bugzilla)

Details

(Keywords: smoketest, Whiteboard: [dogfood+] 06/02)

Steps to reproduce:
1. Install build 2000053008 with NSInstaller

Actual results: Installer fails- error -229, in Install Log 
for browser and mail 
(InstantMessenger/Spellchecker/Talkback/ do install
Dan,
The getFolder("Program, "Netscape Folder") form introduced in the .jst's with 
your recent chrome registration additions mysetriously causes -229.  Will 
revert until this getFolder() problem is resolved.

PDT,
This bug translates to Mac commercial installer doesn't install completely 
yielding an unusable build.  Nominating for dogfood.  
Status: NEW → ASSIGNED
Keywords: dogfood
Priority: P3 → P1
Target Milestone: --- → M17
If you revert it completely then we're back to AIM not loading, another dogfood 
bug.
So, the getFolder() API isn't the problem.  There was a trivial script error.  
One line fix to several scripts.  Nominating for smoketest too per dveditz.
Keywords: smoketest
.
Assignee: sgehani → dveditz
Status: ASSIGNED → NEW
Fix checked in, a=granrose.

Won't be part of the Mac respin in progress, there will have to be *another* 
respin this afternoon.  I modified the browser and mail install scripts, they 
appeared to be the only ones with problems
Status: NEW → RESOLVED
Closed: 24 years ago
Resolution: --- → FIXED
NSMac Installer failing on build 2000053013 with -239 error, in Browser,Mail,and 
IM.
performInstall () returned -239
Status: RESOLVED → REOPENED
Resolution: FIXED → ---
Putting on [dogfood+] radar.
Whiteboard: [dogfood+]
Summary: Mac NSInstaller failing (error -229) on browser/mail files → Mac NSInstaller failing (error -239) on browser/mail files
Taking.  Dan fixed the first bug, I'll look into the masked chrome registration 
issue.
Assignee: dveditz → sgehani
Status: REOPENED → NEW
Whiteboard: [dogfood+] → [dogfood+] 05/31
Status: NEW → ASSIGNED
Whiteboard: [dogfood+] 05/31 → [dogfood+] 06/01
Update: 
The XPInstall engine side of the problem has been identified and a fix should be 
ready shortly to check in.  There is still work on the Mac install wizard side 
to be done to make chrome registration work.  Will post an updated ETA in the 
status whiteboard accounting for the latter mentioned work.
Blocks: 41131
put scalkins and amusil on CC
No longer blocks: 41131
(*)  Install wizard portion of changes checked in by moi.
(*)  .jst file changes checked in by dveditz.  (Thanks Dan!)

Fixed.
Status: ASSIGNED → RESOLVED
Closed: 24 years ago24 years ago
Resolution: --- → FIXED
This is not fixed!  The "chrome:installed-chrome.txt" file is still being placed 
in cwd rather than the targetDir!  Probably the same nsLocalFileMac 
"unintuitiveness."  Investigating.  Should be fixed within 24 hours.
Status: RESOLVED → REOPENED
Resolution: FIXED → ---
Status: REOPENED → ASSIGNED
Whiteboard: [dogfood+] 06/01 → [dogfood+] 06/02
I was smoking some serious crack.  This is fixed, in fact.  Sorry for the bug 
traffic.
Status: ASSIGNED → RESOLVED
Closed: 24 years ago24 years ago
Resolution: --- → FIXED
Status: RESOLVED → VERIFIED
build 2000060208
Product: Browser → Seamonkey
You need to log in before you can comment on or make changes to this bug.