Partial fix for broken chrome registration on the Mac. [b=41002,r=dveditz]